--- a/coffee.html
+++ b/coffee.html
@@ -71,7 +71,7 @@
         </ul>
     </nav>
     <!-- Nav End-->
-    <header class="hero-section">
+    <header class="-section">
         <img src="img/Logos/logo-header.png" alt="" class="logo">
         <div class="content">
             <h4 class="sub-heading"> Sweetest In Utah</h4>
