Working on Credit Page

--- a/eCommerceAssets/search.html
+++ b/eCommerceAssets/search.html
@@ -29,7 +29,7 @@
                     <li class="tea">Matcha Tea</li>
                     <li class="tea">Sweet Tea</li>
                     <li class="tea"> Black Tea</li>
-                    <li class="food">Cinnamon Muffis</li>
+                    <li class="food">Cinnamon Muffins</li>
                     <li class="food"> Chocolate Cookies</li>
                     <li class="food">Chocolate Muffins</li>
                     <li class="food">Cranberry Muffins</li>
@@ -37,11 +37,12 @@
                     <li class="food"> Blueberry Muffins</li>
                     <li class="food"> Pb Blossoms</li>
                     <li class="food">Chocolate Chip</li>
-                    <li class="food">Macarons</li>
+                    <li class="food">Macrons</li>
                     <li class="food">Double Chocolate Muffins</li>
                     <li class="food">Oatmeal Raisin Cookies</li>
                   </ul>
                 </div>
+                
                 <button onclick="document.getElementById('id01').style.display='block'" class="user nav-items"> <img
                         src="../img/buttons/user.png" alt="Profile"> </button>
                 <!-- Starts of the sign up form-->
@@ -91,7 +92,7 @@
         <li class="tea"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Matcha Tea</a></li>
         <li class="tea"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Sweet Tea</a></li>
         <li class="tea"> <a href="#" style="text-decoration: none; background: none; color: inherit;"> Black Tea</a></li>
-        <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Cinnamon Muffis</a></li>
+        <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Cinnamon Muffin</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;"> Chocolate Cookies</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Chocolate Muffins</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Cranberry Muffins</a></li>
@@ -99,7 +100,7 @@
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;"> Blueberry Muffins</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;"> Pb Blossoms</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Chocolate Chip</a></li>
-        <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Macarons</a></li>
+        <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Macrons</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Double Chocolate Muffins</a></li>
         <li class="food"> <a href="#" style="text-decoration: none; background: none; color: inherit;">Oatmeal Raisin Cookies</a></li>
       </ul>
