Updating some files, and building up the food and coffee pages

--- a/coffee.html
+++ b/coffee.html
@@ -71,39 +71,41 @@
         </ul>
     </nav>
     <!-- Nav End-->
-    <header class="-section">
-        <img src="img/Logos/logo-header.png" alt="" class="logo">
-        <div class="content">
-            <h4 class="sub-heading"> Sweetest In Utah</h4>
-        </div>
-    </header>
     <!-- InstanceBeginEditable name="Content" -->
-    <section class="cc">
-        <div class="row">
-            <div class="column card">
-                <img src="img/Product/snapbythree.avif" alt="" style="width:100%">
-                <h1>Black Coffee</h1>
-                <p class="price">$1.99</p>
-                <p class="product-desc">No Sweetening</p>
-                <p><button>Add to Cart</button></p>
+    <section class="mainContent">
+        <div class="productRow"> 
+          <!-- One-->
+          1. Black Coffee - 1.99
+            2. Latte - 5.99
+            3. Cold Brew - 4.55
+          <article class="productInfo">
+            <div> 
+              <img src="#" alt="">
             </div>
-            <div class="column card">
-                <img src="img/Product/tabitha-turner.avif" alt="" style="width:100%">
-                <h1>Cold Brew</h1>
-                <p class="price">$4.55</p>
-                <p class="product-desc">...</p>
-                <p><button>Add to Cart</button></p>
+            <p class="price"> $1.99 </p>
+            <p class="productContent"> Black Coffee</p>
+            <input type="button" name="buy" value="Add to Cart" class="buyButton">
+          </article>
+          <!-- Two -->
+          <article class="productInfo">
+            <div> 
+              <img src="#" alt="">
             </div>
-            <div class="column card">
-                <img src="img/Product/valeriia-miller.avif" alt="" style="width:100%">
-                <h1> Latte</h1>
-                <p class="price">$5.99</p>
-                <p class="product-desc">...</p>
-                <p><button>Add to Cart</button></p>
+            <p class="price"> $5.99 </p>
+            <p class="productContent"> Latte</p>
+            <input type="button" name="buy" value="Add to Cart" class="buyButton">
+          </article>
+          <!-- Three-->
+          <article class="productInfo">
+            <div> 
+              <img src="#" alt="">
             </div>
+            <p class="price"> $4.55 </p>
+            <p class="productContent"> Cold Brew</p>
+            <input type="button" name="buy" value="Add to Cart" class="buyButton">
+          </article>
         </div>
-    </section>
-    <!-- InstanceEndEditable -->
+       </section>
     <footer>
         <div class="footer-content">
             <img src="img/Logos/HivemindLogo.avif" class="logo" alt="Light Logo">
