--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
                                     <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-1.jpg" alt="">
-                                    <h5 class="menu-price">$5</h5>
+                                    <h5 class="menu-price">$1.99</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
                                     <h4>Sugar Cookies</h4>
@@ -192,7 +192,7 @@
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
                                     <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-2.jpg" alt="">
-                                    <h5 class="menu-price">$7</h5>
+                                    <h5 class="menu-price">$1.99</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
                                     <h4>Double Chocolate Muffins</h4>
@@ -203,7 +203,7 @@
                             <div class="row align-items-center mb-5">
                                 <div class="col-4 col-sm-3">
                                     <img class="w-100 rounded-circle mb-3 mb-sm-0" src="img/menu-3.jpg" alt="">
-                                    <h5 class="menu-price">$9</h5>
+                                    <h5 class="menu-price">$3</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
                                     <h4>Macarons</h4>
@@ -220,7 +220,7 @@
                                     <h5 class="menu-price">$5</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <h4>Black Coffee</h4>
+                                    <h4>Matcha Tea</h4>
                                     <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et
                                         lorem dolor</p>
                                 </div>
@@ -231,7 +231,7 @@
                                     <h5 class="menu-price">$7</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <h4>Chocolete Coffee</h4>
+                                    <h4>Sweet Tea</h4>
                                     <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et
                                         lorem dolor</p>
                                 </div>
@@ -242,7 +242,7 @@
                                     <h5 class="menu-price">$9</h5>
                                 </div>
                                 <div class="col-8 col-sm-9">
-                                    <h4>Coffee With Milk</h4>
+                                    <h4>English Tea</h4>
                                     <p class="m-0">Sit lorem ipsum et diam elitr est dolor sed duo guberg sea et et
                                         lorem dolor</p>
                                 </div>
